// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MetadataPrettyLabelsContent /> should render properly 1`] = `
Array [
  .emotion-9 {
  font-family: Roboto Mono;
  font-size: 14px;
  line-height: 18px;
  color: #ffffff;
  vertical-align: bottom;
}

.emotion-9:hover {
  background-color: #0074f538;
}

.emotion-9:hover button svg {
  color: #808080;
}

.emotion-9:hover button:hover svg,
.emotion-9:hover button.focus-visible:focus svg {
  color: #ffffff !important;
}

.emotion-1 {
  padding: 8px;
  padding-left: 0;
  border-bottom: 1px solid #3b3b3b;
}

.emotion-0 {
  font-family: Roboto Condensed;
  font-weight: 400;
  color: #808080;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  min-width: 56px;
  min-height: 56px;
}

.emotion-2 {
  font-family: Roboto Condensed;
  font-weight: 400;
  color: #808080;
}

.emotion-4 {
  font-family: Roboto Condensed;
  font-weight: 400;
  color: #808080;
  text-align: right;
  padding: 8px;
  padding-left: 0;
  padding-right: 0;
  border-bottom: 1px solid #3b3b3b;
}

.emotion-7 {
  padding-top: 8px;
  vertical-align: top;
}

.emotion-6 {
  position: relative;
}

.emotion-5 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 0;
  color: #191919;
  padding: 6px;
  margin: -6px;
}

.emotion-5:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-5[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-5:hover,
.emotion-5.focus-visible:focus {
  color: #ffffff !important;
}

.emotion-8 {
  border-bottom: none !important;
}

<tr
    className="emotion-9"
  >
    <td />
    <td
      className="emotion-1"
    >
      <div
        className="emotion-0"
      >
        N/A
      </div>
    </td>
    <td
      className="emotion-1"
      title="Model ID: c0e83460-6a25-1238-86fa-0242ac150002"
    >
      <span
        className="emotion-2"
      >
        Gundam
      </span>
      <br />
      Exia
    </td>
    <td
      className="emotion-4"
    >
      Train
    </td>
    <td
      className="emotion-7"
    >
      <div
        className="emotion-6"
      >
        <button
          aria-label="Toggle Actions Menu"
          className="actions emotion-5"
          onBlur={[Function]}
          onClick={[Function]}
          type="button"
        >
          <svg
            data-file-name="kebab.svg"
            height={20}
          />
        </button>
      </div>
    </td>
    <td
      className="emotion-8"
    />
  </tr>,
  .emotion-9 {
  font-family: Roboto Mono;
  font-size: 14px;
  line-height: 18px;
  color: #ffffff;
  vertical-align: bottom;
}

.emotion-9:hover {
  background-color: #0074f538;
}

.emotion-9:hover button svg {
  color: #808080;
}

.emotion-9:hover button:hover svg,
.emotion-9:hover button.focus-visible:focus svg {
  color: #ffffff !important;
}

.emotion-1 {
  padding: 8px;
  padding-left: 0;
  border-bottom: 1px solid #3b3b3b;
}

.emotion-2 {
  font-family: Roboto Condensed;
  font-weight: 400;
  color: #808080;
}

.emotion-4 {
  font-family: Roboto Condensed;
  font-weight: 400;
  color: #808080;
  text-align: right;
  padding: 8px;
  padding-left: 0;
  padding-right: 0;
  border-bottom: 1px solid #3b3b3b;
}

.emotion-7 {
  padding-top: 8px;
  vertical-align: top;
}

.emotion-6 {
  position: relative;
}

.emotion-5 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 0;
  color: #191919;
  padding: 6px;
  margin: -6px;
}

.emotion-5:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-5[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-5:hover,
.emotion-5.focus-visible:focus {
  color: #ffffff !important;
}

.emotion-8 {
  border-bottom: none !important;
}

.emotion-0 {
  max-height: 56px;
  width: 56px;
  object-fit: contain;
}

<tr
    className="emotion-9"
  >
    <td />
    <td
      className="emotion-1"
    >
      <img
        alt={
          Array [
            0.226,
            0.327,
            0.697,
            0.813,
          ]
        }
        className="emotion-0"
        src="data:image/png;base64, iVBORw0KGgoAAAANSUhEU..."
        title={
          Array [
            0.226,
            0.327,
            0.697,
            0.813,
          ]
        }
      />
    </td>
    <td
      className="emotion-1"
      title="Model ID: 621bf774-89d9-1244-9596-d6df43f1ede5"
    >
      <span
        className="emotion-2"
      >
        console_face_recognition
      </span>
      <br />
      Mark Ruffalo
    </td>
    <td
      className="emotion-4"
    >
      Train
    </td>
    <td
      className="emotion-7"
    >
      <div
        className="emotion-6"
      >
        <button
          aria-label="Toggle Actions Menu"
          className="actions emotion-5"
          onBlur={[Function]}
          onClick={[Function]}
          type="button"
        >
          <svg
            data-file-name="kebab.svg"
            height={20}
          />
        </button>
      </div>
    </td>
    <td
      className="emotion-8"
    />
  </tr>,
]
`;

exports[`<MetadataPrettyLabelsContent /> should render properly with missing model 1`] = `
Array [
  .emotion-9 {
  font-family: Roboto Mono;
  font-size: 14px;
  line-height: 18px;
  color: #ffffff;
  vertical-align: bottom;
}

.emotion-9:hover {
  background-color: #0074f538;
}

.emotion-9:hover button svg {
  color: #808080;
}

.emotion-9:hover button:hover svg,
.emotion-9:hover button.focus-visible:focus svg {
  color: #ffffff !important;
}

.emotion-1 {
  padding: 8px;
  padding-left: 0;
  border-bottom: 1px solid #3b3b3b;
}

.emotion-0 {
  font-family: Roboto Condensed;
  font-weight: 400;
  color: #808080;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  min-width: 56px;
  min-height: 56px;
}

.emotion-2 {
  font-family: Roboto Condensed;
  font-weight: 400;
  color: #808080;
}

.emotion-4 {
  font-family: Roboto Condensed;
  font-weight: 400;
  color: #808080;
  text-align: right;
  padding: 8px;
  padding-left: 0;
  padding-right: 0;
  border-bottom: 1px solid #3b3b3b;
}

.emotion-7 {
  padding-top: 8px;
  vertical-align: top;
}

.emotion-6 {
  position: relative;
}

.emotion-5 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 0;
  color: #191919;
  padding: 6px;
  margin: -6px;
}

.emotion-5:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-5[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-5:hover,
.emotion-5.focus-visible:focus {
  color: #ffffff !important;
}

.emotion-8 {
  border-bottom: none !important;
}

<tr
    className="emotion-9"
  >
    <td />
    <td
      className="emotion-1"
    >
      <div
        className="emotion-0"
      >
        N/A
      </div>
    </td>
    <td
      className="emotion-1"
      title="Model ID: c0e83460-6a25-1238-86fa-0242ac150002"
    >
      <span
        className="emotion-2"
      >
        
      </span>
      <br />
      Exia
    </td>
    <td
      className="emotion-4"
    >
      Train
    </td>
    <td
      className="emotion-7"
    >
      <div
        className="emotion-6"
      >
        <button
          aria-label="Toggle Actions Menu"
          className="actions emotion-5"
          onBlur={[Function]}
          onClick={[Function]}
          type="button"
        >
          <svg
            data-file-name="kebab.svg"
            height={20}
          />
        </button>
      </div>
    </td>
    <td
      className="emotion-8"
    />
  </tr>,
  .emotion-9 {
  font-family: Roboto Mono;
  font-size: 14px;
  line-height: 18px;
  color: #ffffff;
  vertical-align: bottom;
}

.emotion-9:hover {
  background-color: #0074f538;
}

.emotion-9:hover button svg {
  color: #808080;
}

.emotion-9:hover button:hover svg,
.emotion-9:hover button.focus-visible:focus svg {
  color: #ffffff !important;
}

.emotion-1 {
  padding: 8px;
  padding-left: 0;
  border-bottom: 1px solid #3b3b3b;
}

.emotion-2 {
  font-family: Roboto Condensed;
  font-weight: 400;
  color: #808080;
}

.emotion-4 {
  font-family: Roboto Condensed;
  font-weight: 400;
  color: #808080;
  text-align: right;
  padding: 8px;
  padding-left: 0;
  padding-right: 0;
  border-bottom: 1px solid #3b3b3b;
}

.emotion-7 {
  padding-top: 8px;
  vertical-align: top;
}

.emotion-6 {
  position: relative;
}

.emotion-5 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 0;
  color: #191919;
  padding: 6px;
  margin: -6px;
}

.emotion-5:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-5[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-5:hover,
.emotion-5.focus-visible:focus {
  color: #ffffff !important;
}

.emotion-8 {
  border-bottom: none !important;
}

.emotion-0 {
  max-height: 56px;
  width: 56px;
  object-fit: contain;
}

<tr
    className="emotion-9"
  >
    <td />
    <td
      className="emotion-1"
    >
      <img
        alt={
          Array [
            0.226,
            0.327,
            0.697,
            0.813,
          ]
        }
        className="emotion-0"
        src="data:image/png;base64, iVBORw0KGgoAAAANSUhEU..."
        title={
          Array [
            0.226,
            0.327,
            0.697,
            0.813,
          ]
        }
      />
    </td>
    <td
      className="emotion-1"
      title="Model ID: 621bf774-89d9-1244-9596-d6df43f1ede5"
    >
      <span
        className="emotion-2"
      >
        
      </span>
      <br />
      Mark Ruffalo
    </td>
    <td
      className="emotion-4"
    >
      Train
    </td>
    <td
      className="emotion-7"
    >
      <div
        className="emotion-6"
      >
        <button
          aria-label="Toggle Actions Menu"
          className="actions emotion-5"
          onBlur={[Function]}
          onClick={[Function]}
          type="button"
        >
          <svg
            data-file-name="kebab.svg"
            height={20}
          />
        </button>
      </div>
    </td>
    <td
      className="emotion-8"
    />
  </tr>,
]
`;
